# policyguard

./: .dockerignore  .env.example  .gitignore  README.md  TODOS.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  turbo.json
.context/retros/: 2026-03-15-1.json
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 07c4d981e94d_initial_schema.py  373b646b582e_add_user_id_to_clients.py
apps/api/src/: config.py  main.py  schemas.py
apps/api/src/core/: __init__.py  auth.py  logging.py
apps/api/src/db/: __init__.py  database.py
apps/api/src/models/: __init__.py  models.py
apps/api/src/routers/: analysis.py  auth.py  clients.py  policies.py  reports.py  upload.py
apps/api/src/services/: analysis.py  embeddings.py  llm.py  pdf_parser.py  vectorstore.py
apps/api/tests/: conftest.py  test_analysis.py  test_clients.py  test_health.py  test_smoke.py
apps/web/: .env.example  Dockerfile  next.config.js  package.json  tailwind.config.ts
apps/web/src/__tests__/: smoke.test.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(app)/: layout.tsx  page.tsx
apps/web/src/app/analysis/: page.tsx
apps/web/src/components/: motion-provider.tsx  motion.tsx  protected-route.tsx  sidebar.tsx
apps/web/src/contexts/: auth.tsx
apps/web/src/hooks/: use-count-up.ts
apps/web/src/lib/: api.ts  coplayground-bridge.ts  env.ts  utils.ts
docs/plans/: 2026-03-04-auth-frontend-design.md  2026-03-04-policyguard-auth.md
(+13 files in other folders)
