[project]
name = "policyguard-api"
version = "0.1.0"
description = "PolicyGuard AI - Insurance policy analysis platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "chromadb>=0.5.23",
    "openai>=1.57.0",
    "anthropic>=0.39.0",
    "crewai>=0.86.0",
    "crewai-tools>=0.14.0",
    "pymupdf>=1.25.0",
    "pydantic[email]>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "slowapi>=0.1.9",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = [
    "B008",  # FastAPI Depends() in function defaults — intentional DI pattern
    "E501",  # Line too long — log messages and long strings are acceptable
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
